--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <style>
         table {
           font-family: arial, sans-serif;
-          font-size:18px;
+          font-size:20px;
           text-align: center;
           border collapse: collapse;
           width: 30%;
@@ -120,6 +120,10 @@ The Eurofighter has many key features which aid its agility at supersonic speeds
 </p>
     Table 1: data on the features of the Eurofighter Typhoon
       <table>
+        <style>
+        table {
+           font-size:20px;
+        }
       <tr>
         <th>Features</th>  
           <th>Key Information</th> 
