--- a/index.html
+++ b/index.html
@@ -270,6 +270,31 @@ The Eurofighter has many key features which aid its agility at supersonic speeds
      
   </body>
 
+  <title>GitHub Presentation</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
+        img {
+            width: 100%;
+            height: 100vh;
+            object-fit: cover;
+        }
+    </style>
+</head>
+<body>
+
+    <img src="Slide1.jpg" alt="Slide 1">
+    <img src="Slide2.jpg" alt="Slide 2">
+    <img src="Slide3.jpg" alt="Slide 3">
+    <img src="Slide4.jpg" alt="Slide 3">
+    <img src="Slide5.jpg" alt="Slide 3">
+  
+    <!-- Add more image tags for additional slides -->
+
 
    
     
