--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@ The Eurofighter has many key features which aid its agility at supersonic speeds
   <title>GitHub Presentation</title>
     <style>
         body {
-            margin: 0;
-            padding: 0;
+            margin: 250px;
+            padding: 10px 20px;
             overflow: hidden;
         }
 
