--- a/index.html
+++ b/index.html
@@ -271,19 +271,26 @@ The Eurofighter has many key features which aid its agility at supersonic speeds
   </body>
 
   <title>GitHub Presentation</title>
-    <style>
+   <style>
         body {
-            margin: 250px;
-            padding: 10px 20px;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
             overflow: hidden;
         }
 
         img {
-            width: 100%;
-            height: 100vh;
-            object-fit: cover;
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
         }
     </style>
+     
 </head>
 <body>
 
