--- a/index.html
+++ b/index.html
@@ -269,9 +269,7 @@ The Eurofighter has many key features which aid its agility at supersonic speeds
     </style>
      
   </body>
-
-  
-   <style>
+<style>
         body {
             margin: 0;
             padding: 0;
@@ -290,6 +288,9 @@ The Eurofighter has many key features which aid its agility at supersonic speeds
             height: auto;
         }
     </style>
+
+  
+   
      
 <body>
 
@@ -298,6 +299,8 @@ The Eurofighter has many key features which aid its agility at supersonic speeds
     <img src="Slide3.jpg" alt="Slide 3">
     <img src="Slide4.jpg" alt="Slide 3">
     <img src="Slide5.jpg" alt="Slide 3">
+</body>
+
   
     <!-- Add more image tags for additional slides -->
 
